--- a/static/styles/theme-dark.css
+++ b/static/styles/theme-dark.css
@@ -46,3 +46,24 @@
 
   --status-bar: #111;
 }
+
+/*custom scrollbar for notebook cells and hint box*/
+div::-webkit-scrollbar, ul::-webkit-scrollbar {
+      width: 11px;
+      height: 11px;
+} 
+div::-webkit-scrollbar-track, ul::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+} 
+div::-webkit-scrollbar-thumb, ul::-webkit-scrollbar-thumb {
+      background-color: rgba(204,204,204, .6);
+}
+div::-webkit-scrollbar-thumb:hover, ul::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(204,204,204, .7);
+}
+div::-webkit-scrollbar-thumb:active, ul::-webkit-scrollbar-thumb:active {
+      background-color: rgba(204,204,204, .9);
+}
+div::-webkit-scrollbar-corner, ul::-webkit-scrollbar-corner {
+      background-color: transparent;
+}
