--- a/static/styles/theme-light.css
+++ b/static/styles/theme-light.css
@@ -46,3 +46,24 @@
 
   --status-bar: #eeedee;
 }
+
+/*custom scrollbar for notebook cells and hint box*/
+div::-webkit-scrollbar, ul::-webkit-scrollbar {
+      width: 11px;
+      height: 11px;
+} 
+div::-webkit-scrollbar-track, ul::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+} 
+div::-webkit-scrollbar-thumb, ul::-webkit-scrollbar-thumb {
+      background-color: rgba(199,199,199, .4)
+}
+div::-webkit-scrollbar-thumb:hover, ul::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(199,199,199, .6)
+}
+div::-webkit-scrollbar-thumb:active, ul::-webkit-scrollbar-thumb:active {
+      background-color: rgba(199,199,199, .8)
+}
+div::-webkit-scrollbar-corner, ul::-webkit-scrollbar-corner {
+      background-color:transparent;
+}
