--- a/static/styles/theme-nteract.css
+++ b/static/styles/theme-nteract.css
@@ -383,3 +383,24 @@ tr
 {
   transition: all 0.1s ease-in-out;
 }
+
+/*custom scrollbar for notebook cells and hint box*/
+div::-webkit-scrollbar, ul::-webkit-scrollbar {
+      width: 11px;
+      height: 11px;
+} 
+div::-webkit-scrollbar-track, ul::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+} 
+div::-webkit-scrollbar-thumb, ul::-webkit-scrollbar-thumb {
+      background-color: rgba(237, 243, 247, .6) 
+}
+div::-webkit-scrollbar-thumb:hover, ul::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(237, 243, 247, .7);
+}
+div::-webkit-scrollbar-thumb:active, ul::-webkit-scrollbar-thumb:active {
+      background-color: rgba(237, 243, 247, .9);
+}
+div::-webkit-scrollbar-corner, ul::-webkit-scrollbar-corner {
+      background-color:transparent;
+}
