fix(styles): fix padding on .notebook

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -108,9 +108,9 @@ blockquote p {
  */
 
 .notebook {
-    paddingTop: 10px;
-    paddingLeft: 10px;
-    paddingRight: 10px;
+    padding-top : 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 /*
