fix(styles): add bottom padding to last cell

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -113,6 +113,10 @@ blockquote p {
     padding-right: 10px;
 }
 
+.notebook .cell-container:last-child {
+    padding-bottom: 200px;
+}
+
 /*
   Cell
  */
